# socks5-proxy

./: .gitignore  CMakeLists.txt  Practical.h  README.md  RFC.txt  doh.c  doh.h  doh_test.c  enunciado.txt  request-doh  resp-doh
parser_graph/: open_dot_file.py
patches/: 0008-selector.c-un-muliplexor-de-entrada-salida.patch  0009-stm.c-peque-o-motor-de-maquina-de-estados.patch
src/: Client  MonitorClient.c  MonitorServer.c  SCTPClient.c  SCTPServer.c  Server  args.c  args.h  args_helper.c  args_helper.h  buffer.h  buffer_test.c  configuration.h  hello.c  hello.h  hello_test.c  http_response.dot  http_response_parser.c  http_response_parser.h  http_sniffer.c  http_sniffer.h  main.c  netutils_test.c  parser.c  parser_test.c  parser_utils.h  pop3_sniffer.c  pop3_sniffer.dot  pop3_sniffer.h  rebinder.c  selector.c  selector.h  server_cline_args_parser.c  server_cline_args_parser.h  socks5nio.c  stm.h  stm_test.c
src/auth_response_parser_test_case/: example1.txt
src/doh/: doh.c  doh.h  doh_response_parser.c  doh_response_parser.h  doh_test.c
src/doh_response_parser_test_case/: example1.txt  example3.txt  example4.txt  example5.txt
src/get_access_log_test_case/: example1.txt
src/get_metrics_parser_test_case/: example1.txt
src/get_passwords_test_case/: example1.txt
src/get_users_parser_test_case/: example1.txt
src/get_vars_parser_test_case/: example1.txt
src/http_response_parser_test_case/: example2.txt
src/http_sniffer_test_case/: example1.txt
src/include/: SCTPClient.h  SCTPServer.h
src/monitor/: MonitorClient.c  MonitorServer.c  MonitorServer.h
src/monitor/parser/client/: auth_server_response_parser.c  auth_server_response_parser.h  get_access_log_parser.c  get_access_log_parser.h  get_metrics_parser.c  get_metrics_parser.h  get_passwords_parser.c  get_passwords_parser.h  get_users_parser.c  get_users_parser.h  get_vars_parser.c  get_vars_parser.h
src/monitor/parser/server/: command_request_parser.c  command_request_parser.h  proxy_credentials_parser.c  (+1 more)
src/monitor_parser/: proxy_credentials_parser.c  proxy_credentials_parser.h
src/monitor_parser/client/: auth_server_response_parser.c  auth_server_response_parser.h  get_access_log_parser.c  get_access_log_parser.h  get_metrics_parser.c  get_metrics_parser.h  get_passwords_parser.c  get_passwords_parser.h  get_users_parser.c  get_users_parser.h  get_vars_parser.c  get_vars_parser.h  parser_errors.h
src/monitor_parser/server/: command_request_parser.c  command_request_parser.h  proxy_credentials_parser.c  proxy_credentials_parser.h
src/parser_test_case/: example1.txt
src/pop3_parser_test_case/: example1.txt
src/proxy_credentials_parser_test_case/: example1.txt
src/socks5/: socks5nio.c  socks5nio.h
src/socks5/hello/: auth_user_pass_parser.c  auth_user_pass_parser.h  hello_parser.c  hello_parser.h  hello_test.c
src/socks5/message/: auth_user_pass_helper.c  auth_user_pass_helper.h  request.c  request.h
src/socks5/sniffer/: http_sniffer.c  http_sniffer.h  pop3_sniffer.c  pop3_sniffer.h  sniffed_credentials.c  sniffed_credentials.h
src/utils/: buffer.c  byte_formatter.c  byte_formatter.h  log_helper.c  log_helper.h  netutils.c  netutils.h  netutils_test.c  parser.c  parser.h  selector.c  selector_test.c  sorted_hashmap.c  sorted_hashmap.h  stm.c  stm.h  stm_test.c
(+10 files in other folders)
